# valkyria

./: .clang-tidy  .gitignore  .gitmodules  .init.lua  .nvim.lua  AGENTS.md  CLAUDE.md  CMakeLists.txt  IMPLEMENTATION_PLAN.md  INVESTIGATION_INDEX.md  Makefile  NEXT_SESSION_PLAN.md  PROMPT_build.md  PROMPT_plan.md  Piplock  README.md  REFACTOR_PLAN.md  ROADMAP.md  SESSION_GUIDE.md  SESSION_NOTES.md  cclsp.json.example  debug.entitlements  debug_async_timer_test.valk  debug_async_within_test.valk  debug_batch_simple.valk  debug_timeout.valk  debug_timeout_simple.valk  debug_timeout_test.valk  debug_timer_test.valk  gc_aio_analysis.md  homebrew.cmake  lsan_suppressions.txt  minimal_test.valk  ralph.sh  simple_async_timeout.valk  simple_timeout_test.valk  sync_test.valk  test_aio_all_debug.valk  test_async_only.valk  test_async_simple.valk  (+31 more)
.claude/commands/: ask-expert.md  search-kb.md  websearch.md
.github/workflows/: coverage.yml
.opencode/agent/: claude.md
.opencode/tool/: ask-expert.ts  search-kb.ts  websearch.ts
.tix/: cache.db  config.toml  plan.jsonl  ralph-state.json
automation/: README.md
docs/: AIO_ABSTRACTION_PLAN.md  AIO_DASHBOARD_REDESIGN_PLAN.md  ALGEBRAIC_EFFECTS_PLAN.md  ARCHITECTURE_OVERVIEW.md  ASYNC_API_PLAN.md  ASYNC_AWAIT_PLAN.md  ASYNC_CANCELLATION_DESIGN.md  ASYNC_CLOSURES.md  BINARY_METRICS_PROTOCOL_PLAN.md  BYTECODE_TCO.md  BYTECODE_VM_DESIGN.md  CAPACITY_PLANNING.md  CI_SYSTEM_PATH.md  CLEANUP_PLAN.md  CLOSURE_CAPTURE_BUG.md  CODEBASE_ANALYSIS.md  CONS_IMPLEMENTATION_ANALYSIS.md  CONS_LIST_ANALYSIS.md  CONTRIBUTING.md  COVERAGE_IMPLEMENTATION_SUMMARY.md  COVERAGE_IMPROVEMENT_PLAN_DETAILED.md  COVERAGE_REQUIREMENTS.md  DASHBOARD_DESIGN.md  DASHBOARD_IMPROVEMENT_PLAN.md  DASHBOARD_MEMORY_IMPROVEMENT_PLAN.md  DASHBOARD_REDESIGN_PLAN.md  DISABLED_TESTS_REPORT.md  EXPLICIT_CONTEXT_REFACTOR.md  EXPLORATION_RESULTS.md  GAME_ENGINE_PATH.md  GC_HEAP_REFACTORING_PLAN.md  GC_IMMUTABILITY_PLAN.md  GC_MARKING_ALGORITHM.md  HTTP_API.md  HTTP_API_COVERAGE.md  HTTP_API_QUICK_REFERENCE.md  HTTP_MEMORY_ARCHITECTURE_V2.md  IMPLEMENTATION_BOARD.md  IMPLEMENTATION_CHECKLIST.md  INVESTIGATION_SUMMARY.md  (+46 more)
docs/archive/: 16KB_DATA_LOSS_FIX_PLAN.md  AIO_CONFIG_PLAN.md  ASYNC_AWAIT_IMPLEMENTATION.md  ASYNC_HANDLES_DESIGN.md  ASYNC_IMPLEMENTATION_SUMMARY.md  ASYNC_MONADIC_API.md  BACKPRESSURE_PLAN.md  BYTECODE_ARCHITECTURE_PROBLEMS.md  BYTECODE_REFACTOR_SUMMARY.md  CLEANUP_SUMMARY.md  FIBER_EFFECT_DESIGN.md  FINDINGS_SUMMARY.md  FUTURES_REMOVAL_SUMMARY.md  FUTURE_ASYNC_DESIGN.md  HTTP_API_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_STATUS.md  MODULAR_METRICS_PLAN.md  PLAN_AIO_DEBUG_SERVER.md  README.md  RECOVERY_SUMMARY.md  SSL_CRASH_FIX_PLAN.md  STRESS_TEST_FINDINGS.md  TCO_INVESTIGATION.md  (+13 more)
editors/: package.json
examples/: README.md  WEBSERVER.md  checkpoint_demo.valk  debug_server.valk  demo_webserver.sh  gc_demo.valk  hello_server.valk  repro_gc_double_free.valk  rest_api_demo.valk  test_aio.valk  test_aio2.valk  test_example.valk  webserver_demo.valk
ralph/: .current_task  IMPLEMENTATION_PLAN.md  PROMPT_build.md  PROMPT_decompose.md  PROMPT_investigate.md  PROMPT_plan.md  PROMPT_verify.md  plan.jsonl
roadmap/: README.md  migration.md  phase0_continuations.md  phase2_bytecode.md
scripts/: analyze-core.sh  find-uncovered-branches.py  flamegraph.sh  gen_lsp_builtins.py  quality-diff.py  verify_refactoring.sh
specs/: coverage-improvement.md
src/: aio.h  aio_alloc.c  aio_async.c  aio_body_buffer.h  aio_body_view.h  aio_conn_buffer.c  aio_conn_buffer.h  aio_epoll.c  aio_metrics.c  aio_metrics.h  aio_pressure.h  aio_sse.c  aio_sse.h  aio_sse_builtins.c  aio_sse_diagnostics.c  aio_sse_diagnostics.h  aio_sse_stream_registry.c  aio_sse_stream_registry.h  aio_ssl.c  aio_ssl.h  aio_uring.c  aio_uv.c  async.valk  async_await_new.valk  async_handle.h  async_handles.valk  async_lib.valk  async_monadic.valk  async_simple.valk  bc_vm.c  bc_vm.h  builtins.valk  builtins_aio.c  builtins_env.c  builtins_http.c  builtins_internal.h  builtins_io.c  builtins_json.c  builtins_list.c  builtins_math.c  (+79 more)
static/: dashboard-demo.html  mockup-memory-diagnostics.html
test/: debug_checkpoint.valk  debug_crash.c  debug_crash.sh  debug_gc_noprelude.valk  debug_gc_simple.valk  debug_gc_strings.valk  debug_overflow.valk  gc_aio_test.valk  gdb_debug_server.sh  google_http2.valk  http2_server_client.valk  scan.py  test_2mb_server.valk  test_2mb_string.valk  test_2mb_string_quick.valk  test_50mb_file_server.valk  test_50mb_server.valk  test_aio_all_settled.valk  test_aio_builtins.valk  test_aio_builtins_coverage.valk  test_aio_check.valk  test_aio_combinator_coverage.valk  test_aio_combinators.c  test_aio_config.c  test_aio_config.valk  test_aio_debug.valk  test_aio_handle_diag.c  test_aio_integration.c  test_aio_load_shedding.c  test_aio_metrics.c  test_aio_never.valk  test_aio_retry.valk  test_aio_schedule_cancel.valk  test_aio_semaphore.valk  test_aio_sse_integration.c  test_aio_traverse.valk  test_aio_uv_coverage.c  test_aio_within.valk  test_aio_within_comprehensive.valk  test_allocator.valk  (+349 more)
tla/: AllSettledRace.cfg  AllSettledRace.tla  AllSettledRaceFix.tla  AsyncHandle.tla  AsyncHandleAll.cfg  AsyncHandleAll.tla  AsyncHandleBuggy.tla  AsyncHandleBuggyLeaf.cfg  AsyncHandleBuggyLeaf.tla  AsyncHandleCancelTree.cfg  AsyncHandleCancelTree.tla  AsyncHandleRace.cfg  AsyncHandleRace.tla  AsyncHandleWithin.cfg  AsyncHandleWithin.tla  AsyncOnDoneRace.cfg  AsyncOnDoneRace.tla  AsyncTimerLifecycle.cfg  AsyncTimerLifecycle.tla  AsyncTimerLifecycleBuggy.cfg  Backpressure.cfg  Backpressure.tla  BackpressureBuggy.cfg  BackpressureBuggy.tla  BackpressureTest.cfg  GCBarrier.cfg  GCBarrier.tla  GCBarrierBuggy.cfg  SlabTreiberStack.cfg  SlabTreiberStack.tla  ThreadRegistryGC.cfg  ThreadRegistryGC.tla  ValkAsync.tla  ValkAsyncCrossPool.cfg  ValkAsyncCrossPool.tla  ValkAsyncCrossPoolAll.cfg  ValkAsyncCrossPoolAll.tla  ValkAsyncMultiLevel.cfg  ValkAsyncMultiLevel.tla  ValkGC.cfg  (+10 more)
tools/: bench.valk  hey.valk  test_client.valk  test_server.valk
tree-sitter-valk/: grammar.js  package-lock.json
(+349 files in other folders)
